Added returning points for a move in the move confirmation service